name:                snackbot
version:             0.1.0.0
synopsis:            A bot for suggesting food in Slack.
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Calvin Beck
maintainer:          cbeck@drivewyze.com
copyright:           2016 Calvin Beck
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable snackbot
  hs-source-dirs:      app
  other-modules:       SnackBot.SnackState
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , slack-api >= 0.9 && < 1.0
                     , text >= 1.2.2.1 && < 1.3
                     , attoparsec >= 0.13.0 && < 0.14
                     , transformers >= 0.4.2 && < 0.5
                     , random >= 1.1 && < 1.2
                     , lens >= 4.13 && < 4.14
                     , vector >= 0.11 && < 0.12
                     , acid-state >= 0.14.1 && < 0.15
                     , safecopy >= 0.9.1 && < 0.10
                     , mtl >= 2.2.1 && < 2.3
  default-language:    Haskell2010
